Server/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backendsofa
  labels:
    app: backendsofa

spec:
  replicas: 2
  selector:
    matchLabels:
      app: backendsofa

  template:
    metadata:
      labels:
        app: backendsofa

    spec:
      containers:
        - name: backendsofa
          image: vishaltinani/sofa-web:latest
          imagePullPolicy: Always

          ports:
            
            - containerPort: 3000
