Server/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: backendsofa
spec:
  selector:
    app: backendsofa
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: NodePort
